# h12_adaptive_policy

./: .gitignore  .gitmodules  README.md  environment.yml  log.txt  pyproject.toml
MujocoDeploy/: MUJOCO_LOG.TXT  eval_rma_hand_sweep_6d.py  h1_2_rma.yaml  h1_2_rma_arm.yaml  mujoco_deploy_h12_rma.py
MujocoDeploy/rma_weights/rma_hand/: encoder_3999.pt  policy.pt
RMA/rma_modules/: adaptation_module.py
data/base_eval/: stand_6d_asym_forward_full.csv  stand_6d_forward_extended.csv  stand_6d_full_sideways.csv  stand_6d_mid_sideways.csv  stand_6d_near_full_sideways.csv
data/oracle/hand_6d_sweep/: hand_sweep_6d.csv  (+1 more)
data/real/temp/: dq.npy  (+5 more)
docs/: generate_re3_figures.py  re3_disaster_investigation.md  re3_root_cause_analysis.tex
h12_adaptive_policy/deploy/: eval_rma_hand_sweep_6d.py  eval_rma_hand_sweep_6d_oracle.py  eval_rma_hand_sweep_6d_pin.py  h1_2_rma.yaml  h1_2_rma_arm.yaml  h1_2_rma_arm_magpie_eflesh_fame.yaml  h1_2_rma_arm_magpie_fame.yaml  mujoco_deploy_h12_rma.py
h12_adaptive_policy/deploy_real/: config.py  deploy_real.py  h1_2_rma_debug.yaml  h1_2_rma_re3_encode.yaml  h1_2_rma_re3_no_encode.yaml  h1_2_rma_real.yaml  h1_2_rma_real_encode.yaml  h1_2_rma_real_no_encode.yaml
h12_adaptive_policy/example/: inspect_mujoco_state.py  robot_force_viewer.py  robot_viewer.py
h12_adaptive_policy/plot/: plot_all_joints.py  plot_figure.py  plot_knee_ankle_graph.py  plot_line.py
h1_2/: assets  h1_2_handless.xml
h1_2/magpie/: h1_2_magpie_eflesh_fame.xml  h1_2_magpie_fame.xml
logs/real/: knee_ankle_tau.csv
scripts/: explore_episode.py  investigate_re3.py
(+123 files in other folders)
